--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -13,7 +13,7 @@
     max-width: 120rem !important;
     margin: 0 auto;
 
-    background-image: linear-gradient(to top left, rgba($color-primary-light-2, 0.5), rgba($color-primary-dark-2, 0.5)), url(../../img/students_studying.jpeg);
+    background-image: linear-gradient(to top left, rgba($color-primary-light-2, 0.5), rgba($color-primary-dark-2, 0.5)), url(../img/students_studying.jpeg);
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
